[project]
name = "clubtwitshows"
version = "0.1.0"
description = "GUI interface to download your club twit episodes"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.1",
    "pyside6>=6.9.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.scripts]
run-requirements = "install_requirements:main"
push-to-github = "push_to_github:main"
