[project]
name = "clubtwitshows"
version = "0.1.0"
description = "GUI interface to download your club twit episodes"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "buildozer>=1.5.0",
    "cython>=3.1.3",
    "kivy>=2.3.1",
    "lxml>=6.0.1",
    "pyside6>=6.9.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.scripts]
run-requirements = "install_requirements:main"
push-to-github = "push_to_github:main"
